Prevent search text input and button from being cut off at the top

--- a/app/assets/stylesheets/partials/_seovideo.scss
+++ b/app/assets/stylesheets/partials/_seovideo.scss
@@ -144,11 +144,13 @@ p {
   font-size: 1.4em;
 
   .form_input {
+    display: block;
     width: 100%;
   }
 
   .form_submit {
-    padding: 0.7em 2em;
+    display: block;
+    padding: 0.71em 2em;
   }
 }
 
